--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     compile 'org.jetbrains.kotlin:kotlin-stdlib:1.0.4'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:cardview-v7:25.0.0'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
 }
